[tool.mypy]
check_untyped_defs = "true"
disallow_any_generics = "true"
disallow_incomplete_defs = "true"
disallow_untyped_defs = "true"
no_implicit_optional = "true"

[tool.poetry]
name = "qe-metrics"
version = "1.0.0"
description = "Report QE metrics"
authors = ["Red Hat QE Community"]
readme = "README.md"
license = "Apche-2.0"
homepage = "https://github.com/RedHatQE/qe-metrics"
repository = "https://github.com/RedHatQE/qe-metrics"
packages = [{include = "qe_metrics"}]
classifiers = [
    "License :: OSI Approved :: Apache v2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.urls]
Download = "https://github.com/RedHatQE/qe-metrics"
"Bug Tracker" = "https://github.com/RedHatQE/qe-metrics/issues"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
jira = "^3.5.2"
jinja2 = "^3.1.2"
python-simple-logger = "^1.0.8"
psycopg2-binary = "^2.9.9"
pony = "^0.7.17"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.4"
pre-commit = "*"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ipython = "*"
ipdb = "*"

[tool.poetry.scripts]
qe-metrics = "qe_metrics:qe_metrics"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]
