[tool.coverage.run]
omit = ["tests/*", "qe_metrics/cli.py", "qe_metrics/utils/entrypoint.py"]

[tool.coverage.report]
fail_under = 60
skip_empty = true

[tool.coverage.html]
directory = ".tests_coverage"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "qe-metrics"
version = "1.0.0"
description = "Report QE metrics"
authors = ["Caleb Evans <caevans@redhat.com>"]
readme = "README.md"
license = "Apche-2.0"
homepage = "https://github.com/RedHatQE/qe-metrics"
repository = "https://github.com/RedHatQE/qe-metrics"
packages = [{ include = "qe_metrics" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
Download = "https://github.com/RedHatQE/qe-metrics"
"Bug Tracker" = "https://github.com/RedHatQE/qe-metrics/issues"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
jira = "^3.5.2"
jinja2 = "^3.1.2"
python-simple-logger = "^1.0.8"
psycopg2-binary = "^2.9.9"
pyaml-env = "^1.2.1"
ipdb = "^0.13.13"
pyhelper-utils = "^0.0.31"
flask = "^3.0.3"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.4"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
ipython = "*"

[tool.poetry.scripts]
qe-metrics = "qe_metrics.cli:cli_entrypoint"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
